fix: data overflow

--- a/src/components/Charts/style.less
+++ b/src/components/Charts/style.less
@@ -14,10 +14,10 @@
 .price-chart-tooltip {
     min-width: 100px;
     min-height: 20px;
-    fill: red;
+    fill: rgba(0, 0, 0, 0.1);
 }
 
 .price-chart-tooltip-date,
 .price-chart-tooltip-price {
-        // fill: black;
+    
 }
